# ACTIS

./: .gitignore  CITATION.cff  README.md  requirements.txt  setup.cfg  train.sh  train_semi.sh  train_supervised.sh
.github/workflows/: ci-unittest.yml
configs/: params_semi.toml  params_supervised.toml
data/DSB2018_n0/test/: test_data.npz
data/Mouse_n0/test/: test_data.npz
execution/: train_semi.sh
src/: augmentations.py  calc_metrics.py  data_utils.py  evaluate.py  evaluate_experiment.py  hparam_search.py  label.py  loss.py  projector.py  train_semi.py  train_supervised.py  unet.py
src/S3/: __init__.py  __main__.py  argument_parsing.py  evaluate.py  evaluate_experiment.py  s3_logging.py  train_semi.py  train_supervised.py
src/S3/nn/: loss.py
src/S3/utils/: algorithm.py  data.py  io.py  parameter.py
src/S3/utils/resources/: parameters.toml
src/actis/: __init__.py  __main__.py  actis_logging.py  argument_parsing.py  evaluate.py  evaluate_experiment.py  label.py  train_semi.py  train_supervised.py
src/actis/utils/: algorithm.py  data.py  io.py  parameter.py
src/actis/utils/resources/: parameters.toml
test/: test_integration.py
