[metadata]
name = S3
version = 0.1.0
description = Semi Supervised Training for Instance and Semantic Segmentation
long_description = file: README.md
long_description_content_type = text/markdown
author = Lorenz Rumberger, Jan Philipp Albrecht, Jannick Franzen
maintainer = Lorenz Rumberger, Jan Philipp Albrecht, Jannick Franzen
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = machine learning, deep learning, segmentation, semi supervised learning, instance segmentation, semantic segmentation
project_urls =
    Source=https://github.com/Kainmueller-Lab/semi_supervised_IS
    Tracker=https://github.com/Kainmueller-Lab/semi_supervised_IS/issues

[options]
package_dir =
    =src
include_package_data=False
packages = find_namespace:
install_requires =
    torch~=2.0
    torchvision
    scikit-image
    toml
    h5py
    matplotlib
    tensorboard
    segmentation-models-pytorch
    zarr
    mahotas
    pandas

python_requires = ~=3.11

[options.packages.find]
where = src

[options.package_data]
YML = src/*.yml
CSV = src/*.csv
JSON = src/*.json

[options.entry_points]
console_scripts =
    S3=S3.__main__:main

[flake8]
max-line-length = 120

